# cpphs-blackbox

./: .travis.yml  CHANGES.txt  LICENSE  README.md  appveyor.yml  avoid-using-findfile_-ghc-7_4-doesn_t-include-it_.dpatch  cpphs-blackbox.cabal  travis.hs
src/: Dummy.hs
