name:                cpphs-blackbox
version:             0.1.0.0
synopsis:            Blackbox test of cpphs (a Haskell package)
description:
        It's currently difficult to test cpphs on a variety of
        operating systems and GHC versions. To fix that this project
        does some basic sanity checks with help from CI services.
homepage:            https://github.com/jmitchell/cpphs-blackbox
bug-reports:         https://github.com/jmitchell/cpphs-blackbox/issues
tested-with:         GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2
license:             MIT
license-file:        LICENSE
author:              Jacob Mitchell
maintainer:          jmitchell@member.fsf.org
copyright:           Jacob Mitchell 2017
category:            Testing
build-type:          Simple
extra-doc-files:
  README.md
  CHANGES.txt
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/jmitchell/cpphs-blackbox.git

executable cpphs-blackbox
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
